--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Das ist ein Test
-
-<a href="seite2.html">Seite 2</a>
+Das ist ein Test<br>
+<br>
+Auf eine andere Seite gehen: <a href="seite2.html">Seite 2</a>
 
